서버 업타임, 사용램/서버램 정보, 플레이어정보(레벨, 스킨, 월드 정보) 추가

--- a/mc-manager-backend/src/main/resources/application.properties
+++ b/mc-manager-backend/src/main/resources/application.properties
@@ -1,2 +1,18 @@
+# ?? ?? ??
 server.port=8080
+
+# ?????? ???? ??
 minecraft.plugin.path=../minecraft-server/plugins/plugin
+
+# ?? ??
+logging.level.root=INFO
+logging.level.com.mcmanager=DEBUG
+logging.file.name=logs/minecraft-manager.log
+
+# ?? ?? ??
+logging.file.max-size=10MB
+logging.file.max-history=30
+
+# ?? ?? ??
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
