--- a/mc-manager-backend/build.gradle
+++ b/mc-manager-backend/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.4'
 }
 
-group = 'com.mcmanager'
+group = 'com.mc-manager'
 version = '0.0.1-SNAPSHOT'
 
 java {
@@ -22,8 +22,13 @@ repositories {
 }
 
 dependencies {
-	// Spring Boot Web만 사용
+	// Spring Boot 기본 의존성
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// 데이터베이스 관련 의존성
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'com.mysql:mysql-connector-j:8.0.33'
+	implementation 'com.zaxxer:HikariCP:5.0.1'
 
 	// JSON 파일 감시용
 	implementation 'commons-io:commons-io:2.11.0'
@@ -37,11 +42,14 @@ dependencies {
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
+	// RCON 클라이언트
+	implementation 'com.github.koraktor:steam-condenser:1.3.9'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 springBoot {
-	mainClass = 'com.mcmanager.McManagerBackendApplication'
+	mainClass = 'com.mc-manager.mc_manager_backend.McManagerBackendApplication'
 }
 
 tasks.named('test') {
