--- a/mc-manager-backend/src/main/resources/application.properties
+++ b/mc-manager-backend/src/main/resources/application.properties
@@ -1,18 +1,21 @@
-# ?? ?? ??
+# ?? ??
 server.port=8080
 
-# ?????? ???? ??
-minecraft.plugin.path=../minecraft-server/plugins/plugin
+# ?????? ??
+spring.datasource.url=jdbc:mysql://localhost:3306/minecraft_dashboard
+spring.datasource.username=root
+spring.datasource.password=1238546
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ?? ??
-logging.level.root=INFO
-logging.level.com.mcmanager=DEBUG
-logging.file.name=logs/minecraft-manager.log
+# JPA ??
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# ?? ?? ??
-logging.file.max-size=10MB
-logging.file.max-history=30
-
-# ?? ?? ??
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
-logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+# CORS ??
+cors.allowed-origins=http://localhost:3000
+cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+cors.allowed-headers=*
+cors.allow-credentials=true
+cors.max-age=3600
