--- a/mc-manager-backend/src/main/resources/application.properties
+++ b/mc-manager-backend/src/main/resources/application.properties
@@ -23,3 +23,5 @@ cors.max-age=3600
 minecraft.rcon.host=localhost
 minecraft.rcon.port=25575
 minecraft.rcon.password=1238546
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
