--- a/mc-manager-backend/src/main/resources/application.properties
+++ b/mc-manager-backend/src/main/resources/application.properties
@@ -25,3 +25,9 @@ minecraft.rcon.port=25575
 minecraft.rcon.password=1238546
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# ?????? ?? ?? ??
+minecraft.server.backups=/path/to/minecraft/server/backups
+# ?????? ?? ???? ? ??
+minecraft.server.directory=/Users/min/dev/mc-manager/minecraft-server
+minecraft.server.port=25565
