--- a/mc-manager-backend/src/main/resources/application.properties
+++ b/mc-manager-backend/src/main/resources/application.properties
@@ -20,7 +20,7 @@ cors.allowed-headers=*
 cors.allow-credentials=true
 cors.max-age=3600
 
-minecraft.rcon.host=localhost
+minecraft.rcon.host=127.0.0.1
 minecraft.rcon.port=25575
 minecraft.rcon.password=1238546
 
